[SPARK-1470][SPARK-1842] Use the scala-logging wrapper instead of the directly sfl4j api
Author: GuoQiang Li <witgo@qq.com>

Closes #1369 from witgo/SPARK-1470_new and squashes the following commits:

66a1641 [GuoQiang Li] IncompatibleResultTypeProblem
73a89ba [GuoQiang Li] Use the scala-logging wrapper instead of the directly sfl4j api.

--- a/mllib/pom.xml
+++ b/mllib/pom.xml
@@ -59,6 +59,10 @@
       <artifactId>breeze_${scala.binary.version}</artifactId>
       <version>0.7</version>
       <exclusions>
+        <exclusion>
+          <groupId>com.typesafe</groupId>
+          <artifactId>scalalogging-slf4j_${scala.binary.version}</artifactId>
+        </exclusion>  
         <!-- This is included as a compile-scoped dependency by jtransforms, which is
              a dependency of breeze. -->
         <exclusion>
