Revert "[SPARK-1470][SPARK-1842] Use the scala-logging wrapper instead of the directly sfl4j api"
This reverts commit adc8303294e26efb4ed15e5f5ba1062f7988625d.

--- a/sql/catalyst/pom.xml
+++ b/sql/catalyst/pom.xml
@@ -55,6 +55,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>scalalogging-slf4j_${scala.binary.version}</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
       <scope>test</scope>
