Propagate classpath to child processes during testing.
When spawning child processes that use the Spark assembly jar in
unit tests, all classes needed to run Spark are needed. If the
assembly is built using the "*-provided" profiles, some classes
will not be part of the assembly, although they'll be part of the
unit test's class path since maven/sbt will make the dependencies
available.

So this change extends the unit test's class path to the child
processes so that all classes are available.

I also parameterized the "spark.test.home" setting so that you
can do things like "mvn -f core/pom.xml test" and have it work
(as long as you set it to a proper value; unfortunately maven
makes this super painful to do automatically, because of things
like MNG-5522).

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,12 @@
     <hbase.deps.scope>compile</hbase.deps.scope>
     <hive.deps.scope>compile</hive.deps.scope>
 
+    <!--
+      Overridable test home. So that you can call individual pom files directory without
+      things breaking.
+    -->
+    <spark.test.home>${session.executionRootDirectory}</spark.test.home>
+
     <PermGen>64m</PermGen>
     <MaxPermGen>512m</MaxPermGen>
     <CodeCacheSize>512m</CodeCacheSize>
@@ -1111,7 +1117,7 @@
             <stderr/>
             <systemProperties>
               <java.awt.headless>true</java.awt.headless>
-              <spark.test.home>${session.executionRootDirectory}</spark.test.home>
+              <spark.test.home>${spark.test.home}</spark.test.home>
               <spark.testing>1</spark.testing>
               <spark.ui.enabled>false</spark.ui.enabled>
               <spark.executor.extraClassPath>${test_classpath}</spark.executor.extraClassPath>
