--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -440,9 +440,21 @@
 
     <!-- Profiles that disable inclusion of certain dependencies. -->
     <profile>
+      <id>flume-provided</id>
+      <properties>
+        <flume.deps.scope>provided</flume.deps.scope>
+      </properties>
+    </profile>
+    <profile>
       <id>hadoop-provided</id>
       <properties>
         <hadoop.deps.scope>provided</hadoop.deps.scope>
+      </properties>
+    </profile>
+    <profile>
+      <id>hbase-provided</id>
+      <properties>
+        <hbase.deps.scope>provided</hbase.deps.scope>
       </properties>
     </profile>
     <profile>
@@ -455,12 +467,6 @@
       <id>parquet-provided</id>
       <properties>
         <parquet.deps.scope>provided</parquet.deps.scope>
-      </properties>
-    </profile>
-    <profile>
-      <id>hbase-provided</id>
-      <properties>
-        <hbase.deps.scope>provided</hbase.deps.scope>
       </properties>
     </profile>
   </profiles>
