--- a/network/shuffle/pom.xml
+++ b/network/shuffle/pom.xml
@@ -93,5 +93,15 @@
   <build>
     <outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>
     <testOutputDirectory>target/scala-${scala.binary.version}/test-classes</testOutputDirectory>
+    <plugins>
+      <!-- Disable relocation in the shade plugin invocation. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <configuration>
+          <relocations combine.self="override" />
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
