--- a/pom.xml
+++ b/pom.xml
@@ -1254,7 +1254,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <configuration>
-              <additionalparam>-Xdoclint:-missing</additionalparam>
+              <additionalparam>-Xdoclint:all -Xdoclint:-missing</additionalparam>
             </configuration>
           </plugin>
         </plugins>
