Add a plugin declaration to pluginManagement.

--- a/pom.xml
+++ b/pom.xml
@@ -1049,6 +1049,11 @@
             </filesets>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.10.1</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
