--- a/external/mqtt/pom.xml
+++ b/external/mqtt/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>org.eclipse.paho</groupId>
       <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-+     <version>1.0.1</version>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
