--- a/pom.xml
+++ b/pom.xml
@@ -418,7 +418,7 @@
       <dependency>
         <groupId>net.jpountz.lz4</groupId>
         <artifactId>lz4</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>com.clearspring.analytics</groupId>
